--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "webpack-heroku-boilerplate",
-  "version": "1.0.0",
-  "description": "Simplest Heroku starter kit for React apps.",
+  "name": "parkRangerAlpha",
+  "version": "0.0.1",
+  "description": "A React app for a project with Made to Thrill",
   "main": "./src/entry.js",
-  "homepage": "https://github.com/wallacyyy/webpack-heroku",
-  "author": "Leonardo Couto",
-  "license": "MIT",
+  "author": {
+    "name": "Vizente Freeman",
+    "url": "http://wwww.leo8eleven.com"
+  },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node app.js"
@@ -14,17 +15,18 @@
     "type": "git",
     "url": "git+https://github.com/wallacyyy/webpack-heroku.git"
   },
-  "keywords": [
-    "react",
-    "express",
-    "webpack",
-    "es2015",
-    "javascript"
-  ],
   "dependencies": {
+    "auth0-lock": "^10.3.0",
     "express": "^4.13.4",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.5.2",
+    "redux-localstorage": "^0.4.1",
+    "redux-thunk": "^2.1.0",
+    "xmljson": "^0.2.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -44,5 +46,9 @@
     "cross-env": "^3.1.3",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
-  }
+  },
+  "keywords": [
+    "coasters",
+    "made to thrill"
+  ]
 }
