--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "auth0-lock": "^10.3.0",
     "express": "^4.13.4",
+    "re-base": "^2.6.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
